
syntax = "proto3";

package weewar.v1;

// import "wasmjs/v1/annotations.proto";
import "weewar/v1/models/models.proto";

option go_package = "github.com/turnforge/weewar/gen/go/weewar/v1/models";

message EmptyRequest {}
message EmptyResponse {}

// Request to fetch data from a URL
message SetContentRequest {
    string inner_html = 1;
}

// Response from fetch
message SetContentResponse {
}


message ShowBuildOptionsRequest {
    string inner_html = 1;
    bool hide = 2;
    int32 q = 3;  // Q coordinate of the tile (for the modal to pass back to presenter)
    int32 r = 4;  // R coordinate of the tile (for the modal to pass back to presenter)
}

message ShowBuildOptionsResponse {
}

// Request to fetch data from a URL
message LogMessageRequest {
    string message = 1;
}

// Response from fetch
message LogMessageResponse {
}

// Request to fetch data from a URL
message SetGameStateRequest {
  Game game = 1;
  GameState state = 2;
}

// Response from fetch
message SetGameStateResponse {
}

// Request to update game UI status (current player, turn counter)
message UpdateGameStatusRequest {
    int32 current_player = 1;
    int32 turn_counter = 2;
}

message UpdateGameStatusResponse {
}

// Request to set a tile at a specific coordinate
message SetTileAtRequest {
    int32 q = 1;
    int32 r = 2;
    Tile tile = 3;
}

message SetTileAtResponse {
}

// Request to set a unit at a specific coordinate
message SetUnitAtRequest {
    int32 q = 1;
    int32 r = 2;
    Unit unit = 3;
    bool flash = 4; // Flash animation (for damage)
    bool appear = 5; // Appear/fade-in animation (for spawn)
}

message SetUnitAtResponse {
}

// Request to remove a tile at a specific coordinate
message RemoveTileAtRequest {
    int32 q = 1;
    int32 r = 2;
    bool animate = 3; // Fade-out animation (for death)
}

message RemoveTileAtResponse {
}

// Request to remove a unit at a specific coordinate
message RemoveUnitAtRequest {
    int32 q = 1;
    int32 r = 2;
    bool animate = 3; // Fade-out animation (for death)
}

message RemoveUnitAtResponse {
}

// ============================================================================
// Visualization Command Messages
// ============================================================================

// Request to show highlights on the game board
message ShowHighlightsRequest {
    repeated HighlightSpec highlights = 1;
}

message ShowHighlightsResponse {
}

// Specification for a single highlight
message HighlightSpec {
    int32 q = 1;
    int32 r = 2;
    string type = 3; // "selection", "movement", "attack", "build", "exhausted", "capturing"
    oneof action {
      MoveUnitAction move = 4;
      AttackUnitAction attack = 5;
      BuildUnitAction build = 6;
      CaptureBuildingAction capture = 7;
    }
    int32 player = 8; // Player ID for player-colored highlights (e.g., capturing flag)
}

// Request to clear highlights
message ClearHighlightsRequest {
    repeated string types = 1; // Empty = clear all, otherwise clear specific types
}

message ClearHighlightsResponse {
}

// Request to show a path on the game board
message ShowPathRequest {
    repeated int32 coords = 1; // Flat array: [q1, r1, q2, r2, q3, r3, ...]
    uint32 color = 2; // Hex color (e.g., 0x00FF00 for green)
    int32 thickness = 3; // Line thickness in pixels
}

message ShowPathResponse {
}

// Request to clear paths
message ClearPathsRequest {
    // Empty = clear all paths
}

message ClearPathsResponse {
}

// ============================================================================
// Animation Command Messages
// ============================================================================

// Request to animate unit movement along a path
message MoveUnitRequest {
    Unit unit = 1; // Unit to animate
    repeated HexCoord path = 2; // Path coordinates to animate along
}

message MoveUnitResponse {
}

// Hex coordinate for paths
message HexCoord {
    int32 q = 1;
    int32 r = 2;
}

// Request to show attack effect animation
message ShowAttackEffectRequest {
    int32 from_q = 1; // Attacker Q coordinate
    int32 from_r = 2; // Attacker R coordinate
    int32 to_q = 3; // Defender Q coordinate
    int32 to_r = 4; // Defender R coordinate
    int32 damage = 5; // Damage amount for intensity scaling
    repeated SplashTarget splash_targets = 6; // Additional splash damage targets
}

message SplashTarget {
    int32 q = 1;
    int32 r = 2;
    int32 damage = 3;
}

message ShowAttackEffectResponse {
}

// Request to show heal effect animation
message ShowHealEffectRequest {
    int32 q = 1;
    int32 r = 2;
    int32 amount = 3; // Heal amount
}

message ShowHealEffectResponse {
}

// Request to show capture effect animation
message ShowCaptureEffectRequest {
    int32 q = 1;
    int32 r = 2;
}

message ShowCaptureEffectResponse {
}

// Request to set allowed panels and their order
message SetAllowedPanelsRequest {
    repeated string panel_ids = 1; // Panel IDs in order of importance
}

message SetAllowedPanelsResponse {
}
